@@ -1,3 +1,6 @@
+# 0,1,0,20210207
+	Multi target shapekey (driving multiple shapekeys automatically) added under shapekey panel.
+	Very simple tool for quick rename objects data name same as object name (for now search 'Data Rename' operator).
 
 # 0,1,0,20210131
 	'Align object' issue with new merged object fixed.
